# Compile

./: CMakeLists.txt  west.yml
scripts/: west-commands.yml
scripts/west_commands/: build.py
